# frame

./: .gitignore  CMakeLists.txt  LICENSE  gtest.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
include/kodebooth/frame/: frame.h
test/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp  integrity_check_test.cpp
